<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resultado">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/texto_IMC" />

        <TextView
            android:id="@+id/TV_Resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_valor_IMC" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="CalcularOnClick"
            android:text="@string/boton_volver" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>