<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/texto_altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/texto_altura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_Peso" />

    <TextView
        android:id="@+id/texto_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_peso"
        tools:layout_editor_absoluteX="189dp"
        tools:layout_editor_absoluteY="77dp" />

    <EditText
        android:id="@+id/ET_Peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="556dp"
        android:ems="10"
        android:hint="@string/texto_hpeso"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPeso"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="370dp" />

    <EditText
        android:id="@+id/ET_Altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/texto_haltura"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="265dp" />

</androidx.constraintlayout.widget.ConstraintLayout>